--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=scrumflow
 spring.jpa.open-in-view=true
 spring.profiles.active=test
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security=DEBUG
