feat: Config class, ProjectMembers entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=scrumflow
 spring.jpa.open-in-view=true
 spring.profiles.active=test
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= create
 logging.level.org.springframework.security=DEBUG
