feat: OpenApi Config, UserValidation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name= scrum flow
 spring.jpa.open-in-view= true
 spring.profiles.active= test
 spring.jpa.hibernate.ddl-auto=  create
-
+springdoc.swagger-ui.path=/swagger-ui.html
 logging.level.org.springframework.security=DEBUG
