--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,13 +1,12 @@
-#H2 CONSOLE
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-#DATASOURCE
-spring.datasource.url=jdbc:h2:file:~/test
+# H2 database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
 
-#JPA
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
